--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -27,7 +27,7 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8"> 
+                <div class="u-center-text u-margin-bottom-big"> 
                     <h2 class="heading-secondary">
                         Exciting tours for adventourus people
                     </h2>
@@ -35,10 +35,26 @@
                 </div>
                 <div class="row">
                         <div class="col-1-of-2">
-                            Text Conten
+                            <h3 class="heading-tertiary  u-margin-bottom-small">
+                                You're going to fall in love with nature
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing uibusdam, consequatur nobis cumque amet. Ad eligendi reprehenderit sint similique et, dignissimos tenetur sapiente!
+                            </p>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Live adventures like you never have before
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisiciehenderit sint similique et, dignissimos tenetur sapiente!
+                            </p>
+                            <a href="# " class="btn-text">Learn more &rarr;</a>
                         </div>
                         <div class="col-1-of-2">
-                            Image Composition
+                            <div class="composition">
+                                <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                                <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                                <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3">
+                            </div>
                         </div>
                     </div>
             </section>
