--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -117,19 +117,114 @@
                             <div class="col-1-of-3">
                                 <div class="card">
                                     <div class="card__side card__side--front">
-                                        Text
+                                        <div class="card__picture card__picture--1">
+                                            &nbsp;
+                                        </div>
+                                        <h4 class="card__heading">
+                                            <span class="card__heading-span card__heading-span--1"></spanclas>
+                                            The Sea Explorer
+                                        </h4>
+                                        <div class="card__details">
+                                            <ul>
+                                                <li>3 Day tours</li>
+                                                <li>Up to 30 people</li>
+                                                <li>2 tour guides</li>
+                                                <li>Sleep in cozy hotels</li>
+                                                <li>Dificulty: easy</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                     <div class="card__side card__side--back card__side--back-1">
-                                        Text B
+                                       <div class="card__cta">
+                                            <div class="card__price-box">
+                                                <p class="card__price-only">
+                                                    Only
+                                                </p>
+                                                <p class="card__price-value">
+                                                   $297
+                                                </p>
+
+                                            </div>
+                                            <a href="" class="btn btn--white ">Book now</a>
+                                       </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-1-of-3">
-                                Col 1 of 3
+                                    <div class="card">
+                                            <div class="card__side card__side--front">
+                                                <div class="card__picture card__picture--2">
+                                                    &nbsp;
+                                                </div>
+                                                <h4 class="card__heading">
+                                                    <span class="card__heading-span card__heading-span--2"></spanclas>
+                                                    The Forest Hiker
+                                                </h4>
+                                                <div class="card__details">
+                                                    <ul>
+                                                        <li>7 Day tours</li>
+                                                        <li>Up to 40 people</li>
+                                                        <li>6 tour guides</li>
+                                                        <li>Sleep in provided hotels</li>
+                                                        <li>Dificulty: medium</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="card__side card__side--back card__side--back-2">
+                                               <div class="card__cta">
+                                                    <div class="card__price-box">
+                                                        <p class="card__price-only">
+                                                            Only
+                                                        </p>
+                                                        <p class="card__price-value">
+                                                           $497
+                                                        </p>
+        
+                                                    </div>
+                                                    <a href="" class="btn btn--white ">Book now</a>
+                                               </div>
+                                            </div>
+                                        </div>
                             </div>
                             <div class="col-1-of-3">
-                                Col 1 of 3
+                                    <div class="card">
+                                            <div class="card__side card__side--front">
+                                                <div class="card__picture card__picture--3">
+                                                    &nbsp;
+                                                </div>
+                                                <h4 class="card__heading">
+                                                    <span class="card__heading-span card__heading-span--3"></spanclas>
+                                                    The Snow Adventurer
+                                                </h4>
+                                                <div class="card__details">
+                                                    <ul>
+                                                        <li>5 Day tours</li>
+                                                        <li>Up to 15 people</li>
+                                                        <li>3 tour guides</li>
+                                                        <li>Sleep in provided tents</li>
+                                                        <li>Dificulty: hard</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="card__side card__side--back card__side--back-3">
+                                               <div class="card__cta">
+                                                    <div class="card__price-box">
+                                                        <p class="card__price-only">
+                                                            Only
+                                                        </p>
+                                                        <p class="card__price-value">
+                                                           $597
+                                                        </p>
+        
+                                                    </div>
+                                                    <a href="" class="btn btn--white ">Book now</a>
+                                               </div>
+                                            </div>
+                                        </div>
                             </div>
+                        </div>
+                        <div class="u-center-text u-margin-top-huge">
+                            <a href="#" class="btn btn--primary">Discover all tours</a>
                         </div>
             </section>
         </main>
