added stories section

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -22,7 +22,7 @@
                    <span class="heading-primary--main">Outdoors</span>
                    <span class="heading-primary--sub ">is where life happens</span>
                </h1>
-               <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+               <a href="#tours" class="btn btn--white btn--animated">Discover our tours</a>
            </div>
         </header>
         <main>
@@ -107,7 +107,7 @@
                  </div>
              </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="tours">
                 <div class="u-center-text u-margin-bottom-big"> 
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -225,6 +225,47 @@
                         </div>
                         <div class="u-center-text u-margin-top-huge">
                             <a href="#" class="btn btn--primary">Discover all tours</a>
+                        </div>
+            </section>
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video  class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                            Your browser is not supported
+                    </video>
+                </div>
+                    <div class="u-center-text u-margin-bottom-big"> 
+                        <h2 class="heading-secondary">
+                            We make peple genuinely happy
+                        </h2>
+                    </div>
+                    <div class="row">
+                        <div class="story">
+                           <figure class="story__shape">
+                                <img src="img/nat-8.jpg" alt="Person" class="story__image">
+                                <figcaption class="story__caption">Mary Smith</figcaption>
+                           </figure>
+                           <div class="story__text">
+                               <h3 class="heading-tertiary  u-margin-bottom-small">I had the best weekend with my family</h3>
+                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
+                           </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="story">
+                           <figure class="story__shape">
+                                <img src="img/nat-9.jpg" alt="Person" class="story__image">
+                                <figcaption class="story__caption">Jack Wilson</figcaption>
+                           </figure>
+                           <div class="story__text">
+                               <h3 class="heading-tertiary  u-margin-bottom-small">I had the best weekend with my family</h3>
+                               <p>Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
+                           </div>
+                        </div>
+                    </div>
+                    <div class="u-center-text u-margin-top-huge">
+                            <a href="# " class="btn-text">Read more &rarr;</a>
                         </div>
             </section>
         </main>
