--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -26,7 +26,7 @@
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a> </li>
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span >Popular tours</a> </li>
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span> Stories</a> </li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"> <span>05</span>Popular tours</a> </li>                                     
+                    <li class="navigation__item"><a href="#" class="navigation__link"> <span>05</span>Booking</a> </li>                                     
                 </ul>
             </nav>
         </div>
@@ -39,7 +39,7 @@
                    <span class="heading-primary--main">Outdoors</span>
                    <span class="heading-primary--sub ">is where life happens</span>
                </h1>
-               <a href="#tours" class="btn btn--white btn--animated">Discover our tours</a>
+               <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
            </div>
         </header>
         <main>
@@ -124,7 +124,7 @@
                  </div>
              </div>
             </section>
-            <section class="section-tours" id="tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big"> 
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -162,7 +162,7 @@
                                                 </p>
 
                                             </div>
-                                            <a href="" class="btn btn--white ">Book now</a>
+                                            <a href="#popup" class="btn btn--white ">Book now</a>
                                        </div>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                                         </p>
         
                                                     </div>
-                                                    <a href="" class="btn btn--white ">Book now</a>
+                                                    <a href="#popup" class="btn btn--white ">Book now</a>
                                                </div>
                                             </div>
                                         </div>
@@ -234,7 +234,7 @@
                                                         </p>
         
                                                     </div>
-                                                    <a href="" class="btn btn--white ">Book now</a>
+                                                    <a href="#popup" class="btn btn--white ">Book now</a>
                                                </div>
                                             </div>
                                         </div>
@@ -265,7 +265,7 @@
                            </figure>
                            <div class="story__text">
                                <h3 class="heading-tertiary  u-margin-bottom-small">I had the best weekend with my family</h3>
-                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
+                               <p>Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
                            </div>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                            </figure>
                            <div class="story__text">
                                <h3 class="heading-tertiary  u-margin-bottom-small">I had the best weekend with my family</h3>
-                               <p>Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
+                               <p>aliquid eum, quam illum voluptate iste ex praesentium seddipisicing elit. Dolorem quas provident impedit error? Nemo a veniam totam, temporibus sequi asperiores saepe aliquid eum, quam illum voluptate.</p>
                            </div>
                         </div>
                     </div>
@@ -352,6 +352,23 @@
             </div>
 
         </footer>
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <div class="heading-secondary u-margin-bottom-small">Start booking</div>
+                    <div class="heading-tertiary u-margin-bottom-small">Important &ndash; Text</div>
+                    <p class="popup__text">
+                        deserunt numquam, maxime iusto quibusdam laudantium, voluptates eaque veniam quia reiciendis! Laudantium reiciendis itaque voluptate molestias vero ipsum. sit amet consectetur adipisicing elit. Eaque sint, ducimus nulla eum ratione error tempora mollitia fuga commodi, omnis asperiores quos illo dolores, porro cumque velit? Blanditiis, iusto ducimus!
+                    </p>
+                    <a  href="#" class="btn btn--primary">Book Now</a>
+                </div>
+            </div>
+        </div>
 
         <!-- <section class="grid-test">
             <div class="row">
