--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -13,7 +13,19 @@
 </head>
 
 <body>
-    hey
+    <div class="container">
+        <header class="header">
+            Header
+        </header>
+        <div class="content">
+            <nav class="sidebar">
+                Navigation
+            </nav>
+            <main class="hotel-view">
+                Hotel
+            </main>
+        </div>
+    </div>
 </body>
 
 </html>
