--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -134,8 +134,72 @@
                     </div>
 
                 </div>
-            </main>
+                <div class="detail">
+                    <div class="description">
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam omnis odit
+                            cupiditate accusamus aut officia doloribus. Similique consectetur quia placeat, a error
+                            nisi laboriosam.
+                        </p>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam omnis odit
+                            cupiditate accusamus aut officia doloribus.
+                        </p>
+                        <ul class="list">
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                            <li class="list__item">Free airport shuttle</li>
+                            <li class="list__item">Pets allowed</li>
+                            <li class="list__item">Air conditioning and heating</li>
+                            <li class="list__item">We speak all languages</li>
+                            <li class="list__item">Perfect for families</li>
+                        </ul>
+                        <div class="recommend">
+                            <p class="recommend__count">Lucy and 3 other fireds recommend this hotel</p>
+                            <div class="recommend__friends">
+                                <img src="img/user-3.jpg" alt="Friend" class="recommend__photo">
+                                <img src="img/user-4.jpg" alt="Friend" class="recommend__photo">
+                                <img src="img/user-5.jpg" alt="Friend" class="recommend__photo">
+                                <img src="img/user-6.jpg" alt="Friend" class="recommend__photo">
+                            </div>
+                        </div>
+                    </div>
+                    <f class="user-reviews">
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam omnis odit
+                                cupiditate accusamus aut officia doloribus.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-1.jpg" alt="" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Nick Smith</p>
+                                    <p class="review__user-date">Feb 23rd, 2018</p>
+                                </div>
+                                <div class="review__rating">7.8</div>
+                            </figcaption>
+                        </figure>
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam omnis odit
+                                cupiditate accusamus aut officia doloribus.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-2.jpg" alt="" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Mary Smith</p>
+                                    <p class="review__user-date">Feb 23rd, 2018</p>
+                                </div>
+                                <div class="review__rating">7.8</div>
+                            </figcaption>
+                        </figure>
+                        <button class="btn-inline">Show all <span>&rarr;</span></button>
+
+                </div>
         </div>
+        </main>
+    </div>
     </div>
 </body>
 
