--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -197,6 +197,16 @@
                         <button class="btn-inline">Show all <span>&rarr;</span></button>
 
                 </div>
+                <div class="cta">
+                    <h2 class="cta__book-now">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </h2>
+                    <button class="btn">
+                        <span class="btn__visible">Book now</span>
+                        <span class="btn__invisible">Only 4 rooms left</span>
+
+                    </button>
+                </div>
         </div>
         </main>
     </div>
